@@ -1,3 +1,8 @@
+2006-09-27  Ville Vainio  <vivainio@gmail.com>
+
+	* iplib.py (raw_input): python 2.5 closes stdin on quit -> avoid
+    infinite loop and just exit. It's a hack, but will do for a while.
+
 2006-08-25  Walter Doerwald  <walter@livinglogic.de>
 
 	* IPython/Extensions/ipipe.py (ils): Add arguments dirs and files to
